<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#FFDFEAF1">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:id="@+id/button_1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:background="#F08C35"
        android:layout_centerInParent="true"
        android:width="200dp"
        android:onClick="toastPop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/button_2"
        android:layout_below="@+id/button_1"
        android:layout_alignEnd="@+id/button_1"
        android:layout_alignStart="@+id/button_1"
        android:textColor="#ffffff"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="toastPop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:id="@+id/button_3"
        android:layout_below="@+id/button_2"
        android:layout_alignEnd="@+id/button_1"
        android:layout_alignStart="@+id/button_1"
        android:textColor="#ffffff"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="toastPop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:id="@+id/button_4"
        android:layout_below="@+id/button_3"
        android:layout_alignEnd="@+id/button_1"
        android:layout_alignStart="@+id/button_1"
        android:textColor="#ffffff"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="toastPop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:id="@+id/button_5"
        android:layout_below="@+id/button_4"
        android:layout_alignEnd="@+id/button_1"
        android:layout_alignStart="@+id/button_1"
        android:textColor="#ffffff"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="toastPop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:id="@+id/button_6"
        android:textColor="#ffffff"
        android:background="#ff241d"
        android:layout_below="@+id/button_5"
        android:layout_alignStart="@+id/button_5"
        android:layout_alignEnd="@+id/button_1"
        android:layout_marginTop="10dp"
        android:onClick="toastPop"/>

</RelativeLayout>
